--- a/GamePortal/frontend/src/index.html
+++ b/GamePortal/frontend/src/index.html
@@ -1,14 +1,27 @@
 <!doctype html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>frontend</title>
-  <base href="/">
+<html lang="en">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<head>
+    <meta charset="utf-8">
+    <title>Frontend</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root>Loading...</app-root>
-</body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
+</script>
+<script type="text/javascript" src="p5.sound.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/molleindustria/p5.play@42cd19c3/lib/p5.play.js"></script>
+
+
+<app-root></app-root>
+
+
+
+
+
+
 </html>
