Performed app styling
Bootswatch added
Rounded Inputs and Buttons
Transparent logo now available
Main color: #1b2833

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -26,8 +26,9 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/css/mdb.min.css" rel="stylesheet">
   <!-- Google font for tetris-->
   <link href=”https://fonts.googleapis.com/css?family=Press+Start+2P" rel=”stylesheet” />
+  <!-- Google font for navbar -->
+  <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
 </head>
-
 
 <app-root></app-root>
 
