last minute touch ups

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -31,6 +31,6 @@
 
 <app-root></app-root>
 
-<footer>2019 Sleuth Co. | DJ-RAY-KHANH-ILYA-GEORGE</footer>
 
+<footer  id="sticky-footer " class="py-4 bg-dark text-white-50 "style=" position: fixed; bottom: 0; width: 100%; text-align: center; vertical-align: middle; ">         2019 Sleuth Co. | DJ-RAY-KHANH-ILYA-GEORGE</footer>
 </html>
